# many_body_localization

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  run_diagonalizations.sh
.ipynb_checkpoints/: CMakeLists-checkpoint.txt  README-checkpoint.md  main-checkpoint.cpp
analysis/: plot.py
scripts/: sweep.sh
src/: heisenberg_diag.cpp
